--- a/.github/workflows/release-latest.yml
+++ b/.github/workflows/release-latest.yml
@@ -34,7 +34,7 @@ jobs:
           git tag v${{ fromJson(steps.pkg.outputs.json).version }}
           git push origin v${{ fromJson(steps.pkg.outputs.json).version }}
 
-  injection-image-publish:
+  injection-image-publish-and-gh-release-assets:
     runs-on: ubuntu-latest
     needs: ['publish']
     steps:
@@ -50,9 +50,15 @@ jobs:
         run: |
           content=`cat ./package.json | tr '\n' ' '`
           echo "::set-output name=json::$content"
-      - name: npm pack for injection image
+      - name: npm pack and shasum
         run: |
           npm pack dd-trace@${{ fromJson(steps.pkg.outputs.json).version }}
+          sha256sum dd-trace-js-${{ fromJson(steps.pkg.outputs.json).version }}.tgz > shasum.txt
+      - uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            dd-trace-js-${{ fromJson(steps.pkg.outputs.json).version }}.tgz
+            shasum.txt
       - uses: ./.github/actions/injection
         with:
           init-image-version: v${{ fromJson(steps.pkg.outputs.json).version }}
