--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -36,6 +36,10 @@ jobs:
         version: [16, latest]
         framework: [cucumber, playwright]
     runs-on: ubuntu-latest
+    env:
+      DD_SERVICE: dd-trace-js-integration-tests
+      DD_CIVISIBILITY_AGENTLESS_ENABLED: 1
+      DD_API_KEY: ${{ secrets.DD_API_KEY_CI_APP }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -43,6 +47,8 @@ jobs:
           node-version: ${{ matrix.version }}
       - run: yarn install
       - run: yarn test:integration:${{ matrix.framework }}
+        env:
+          NODE_OPTIONS: '-r ./ci/init'
 
   integration-cypress:
     strategy:
@@ -51,6 +57,10 @@ jobs:
         # 6.7.0 is the minimum version we support
         cypress-version: [6.7.0, latest]
     runs-on: ubuntu-latest
+    env:
+      DD_SERVICE: dd-trace-js-integration-tests
+      DD_CIVISIBILITY_AGENTLESS_ENABLED: 1
+      DD_API_KEY: ${{ secrets.DD_API_KEY_CI_APP }}
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/node/setup
@@ -61,6 +71,7 @@ jobs:
       - run: yarn test:integration:cypress
         env:
           CYPRESS_VERSION: ${{ matrix.cypress-version }}
+          NODE_OPTIONS: '-r ./ci/init'
 
   lint:
     runs-on: ubuntu-latest
