--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -128,11 +128,13 @@ services:
       - LDAP_PASSWORDS=password1,password2
 
   testagent:
-    image: ghcr.io/datadog/dd-apm-test-agent/ddapm-test-agent:v1.10.1
+    image: williamconti549/dd-apm-test-agent:service-naming
     ports:
         - "127.0.0.1:9126:9126"
     environment:
         - LOG_LEVEL=DEBUG
         - TRACE_LANGUAGE=javascript
+        - DISABLE_ERROR_RESPONSES=true
+        - POOL_TRACE_CHECK_FAILURES=true
         - DISABLED_CHECKS=trace_content_length
         - PORT=9126
