--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -897,6 +897,8 @@ jobs:
           LOG_LEVEL: DEBUG
           TRACE_LANGUAGE: javascript
           DISABLED_CHECKS: trace_content_length
+          DD_DISABLE_ERROR_RESPONSES: true
+          DD_POOL_TRACE_CHECK_FAILURES: true
           PORT: 9126
         ports:
           - 9126:9126
