--- a/.github/actions/testagent/results/action.yml
+++ b/.github/actions/testagent/results/action.yml
@@ -7,20 +7,21 @@ runs:
     - run: |
         RESPONSE=$(curl -s -w "\n%{http_code}" -o response.txt http://127.0.0.1:9126/test/trace_check/failures)
         RESPONSE_CODE=$(echo "$RESPONSE" | awk 'END {print $NF}')
+
+        SUMMARY_RESPONSE=$(curl -s -w "\n%{http_code}" -o summary_response.txt http://127.0.0.1:9126/test/trace_check/summary)
+        SUMMARY_RESPONSE_CODE=$(echo "$SUMMARY_RESPONSE" | awk 'END {print $NF}')
+        
         if [[ $RESPONSE_CODE -eq 200 ]]; then
           echo "All APM Test Agent Check Traces returned successful! (HTTP 200)"
           cat response.txt
+          echo "APM Test Agent Check Traces Summary Results:"
+          cat summary_response.txt | jq '.'
         else
           echo "APM Test Agent Check Traces failed with response code: $RESPONSE_CODE"
           echo "Failures:"
           cat response.txt
+          echo "APM Test Agent Check Traces Summary Results:"
+          cat summary_response.txt | jq '.'
           exit 1
         fi
-      shell: bash
-    - uses: actions/checkout@v2
-    - run: |
-        RESPONSE=$(curl -s -w "\n%{http_code}" -o response.txt http://127.0.0.1:9126/test/trace_check/summary)
-        RESPONSE_CODE=$(echo "$RESPONSE" | awk 'END {print $NF}')
-        echo "APM Test Agent Check Traces Summary Results:"
-        cat response.txt
       shell: bash
