--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -165,5 +165,5 @@ services:
     environment:
         - LOG_LEVEL=DEBUG
         - TRACE_LANGUAGE=javascript
-        - DISABLED_CHECKS=trace_content_length
+        - ENABLED_CHECKS=trace_count_header,meta_tracer_version_header
         - PORT=9126
