--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -136,5 +136,5 @@ services:
         - TRACE_LANGUAGE=javascript
         - DD_DISABLE_ERROR_RESPONSES=true
         - DD_POOL_TRACE_CHECK_FAILURES=true
-        - DISABLED_CHECKS=trace_content_length
+        - ENABLED_CHECKS=trace_stall,meta_tracer_version_header,trace_count_header,trace_peer_service,trace_dd_service
         - PORT=9126
