--- a/benchmark/sirun/Dockerfile
+++ b/benchmark/sirun/Dockerfile
@@ -1,3 +1,4 @@
+# The version of this file in master is used across all PRs regardless of upstream branch
 FROM --platform=linux/amd64 ubuntu:22.04
 
 RUN apt-get update && apt-get install --no-install-recommends -y \
@@ -25,6 +26,7 @@ RUN wget -O sirun.tar.gz https://github.com/DataDog/sirun/releases/download/v0.1
 	&& rm sirun.tar.gz \
 	&& mv sirun /usr/bin/sirun
 
+# This list of installed Node.js versions should include all versions used by any active release line
 RUN mkdir -p /usr/local/nvm \
 	&& wget -q -O - https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.3/install.sh | bash \
 	&& . $NVM_DIR/nvm.sh \
