--- a/benchmark/sirun/Dockerfile
+++ b/benchmark/sirun/Dockerfile
@@ -1,3 +1,4 @@
+# The version of this file in master is used across all PRs regardless of upstream branch
 FROM --platform=linux/amd64 ubuntu:22.04
 
 RUN apt-get update && apt-get install --no-install-recommends -y \
@@ -25,10 +26,14 @@ RUN wget -O sirun.tar.gz https://github.com/DataDog/sirun/releases/download/v0.1
 	&& rm sirun.tar.gz \
 	&& mv sirun /usr/bin/sirun
 
+# This list of installed Node.js versions should include all versions used by any active release line
 RUN mkdir -p /usr/local/nvm \
 	&& wget -q -O - https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.3/install.sh | bash \
 	&& . $NVM_DIR/nvm.sh \
-	&& nvm install --no-progress 16.17.1 \
-	&& nvm install --no-progress 18.10.0 \
+	&& nvm install --no-progress 12.22.12 \
+	&& nvm install --no-progress 14.21.3 \
+	&& nvm install --no-progress 16.20.1 \
+	&& nvm install --no-progress 18.16.1 \
+	&& nvm install --no-progress 20.4.0 \
 	&& nvm alias default 18 \
 	&& nvm use 18
