--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
     "import/no-extraneous-dependencies": 2,
     "standard/no-callback-literal": 0,
     "no-prototype-builtins": 0,
-    "n/no-restricted-require": [2, ["diagnostics_channel"]]
+    "n/no-restricted-require": [2, ["diagnostics_channel"]],
+    "object-curly-newline": ["error", {"multiline": true, "consistent": true }]
   }
 }
