--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -2,8 +2,22 @@
 /packages/dd-trace/src/appsec/ @DataDog/appsec-js
 /packages/dd-trace/test/appsec/ @DataDog/appsec-js
 
-/packages/datadog-plugin-(jest|mocha|cucumber|cypress|playwright)/ @DataDog/ci-app-libraries
-/packages/datadog-instrumentations/src/(jest|mocha|cucumber|cypress|playwright).js @DataDog/ci-app-libraries
-/integration-tests/(ci-visibility|cucumber|cypress|playwright)/ @DataDog/ci-app-libraries
-/integration-tests/(ci-visibility.spec.js|playwright.config.js|playwright.config.ts|test-api-manual.spec.js|cypress-config.json|ci-visibility-intake.js|cypress.config.js) @DataDog/ci-app-libraries
 /packages/dd-trace/src/ci-visibility/ @DataDog/ci-app-libraries
+/packages/datadog-plugin-jest/ @DataDog/ci-app-libraries
+/packages/datadog-plugin-mocha/ @DataDog/ci-app-libraries
+/packages/datadog-plugin-cucumber/ @DataDog/ci-app-libraries
+/packages/datadog-plugin-cypress/ @DataDog/ci-app-libraries
+/packages/datadog-plugin-playwright/ @DataDog/ci-app-libraries
+
+/packages/datadog-instrumentations/src/jest.js @DataDog/ci-app-libraries
+/packages/datadog-instrumentations/src/mocha.js @DataDog/ci-app-libraries
+/packages/datadog-instrumentations/src/cucumber.js @DataDog/ci-app-libraries
+/packages/datadog-instrumentations/src/cypress.js @DataDog/ci-app-libraries
+/packages/datadog-instrumentations/src/playwright.js  @DataDog/ci-app-libraries
+
+/integration-tests/ci-visibility/ @DataDog/ci-app-libraries
+/integration-tests/cucumber/ @DataDog/ci-app-libraries
+/integration-tests/cypress/ @DataDog/ci-app-libraries
+/integration-tests/playwright/ @DataDog/ci-app-libraries
+/integration-tests/ci-visibility-spec.js @DataDog/ci-app-libraries
+/integration-tests/test-api-manual.spec.js @DataDog/ci-app-libraries
