--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -29,6 +29,7 @@ jobs:
       - run: yarn install
       - run: sudo sysctl -w kernel.core_pattern='|/bin/false'
       - run: yarn test:integration
+      - run: yarn test:integration:plugins
 
   integration-ci:
     strategy:
