--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
   },
   "dependencies": {
     "@datadog/native-appsec": "^3.2.0",
-    "@datadog/native-iast-rewriter": "./native-iast-rewriter-2.0.1.tgz",
+    "@datadog/native-iast-rewriter": "./datadog-native-iast-rewriter-2.1.2-beta.0.tgz",
     "@datadog/native-iast-taint-tracking": "^1.5.0",
     "@datadog/native-metrics": "^2.0.0",
     "@datadog/pprof": "3.1.0",
