--- a/.github/actions/testagent/results/action.yml
+++ b/.github/actions/testagent/results/action.yml
@@ -5,10 +5,10 @@ runs:
   steps:
     - uses: actions/checkout@v2
     - run: |
-        RESPONSE=$(curl -s -w "\n%{http_code}" -o response.txt http://127.0.0.1:9126/test/trace_check/failures)
+        RESPONSE=$(curl -s -w "\n%{http_code}" -o response.txt http://127.0.0.1:9126/test/trace_check/failures?return_all=true)
         RESPONSE_CODE=$(echo "$RESPONSE" | awk 'END {print $NF}')
 
-        SUMMARY_RESPONSE=$(curl -s -w "\n%{http_code}" -o summary_response.txt http://127.0.0.1:9126/test/trace_check/summary)
+        SUMMARY_RESPONSE=$(curl -s -w "\n%{http_code}" -o summary_response.txt http://127.0.0.1:9126/test/trace_check/summary?return_all=true)
         SUMMARY_RESPONSE_CODE=$(echo "$SUMMARY_RESPONSE" | awk 'END {print $NF}')
         
         if [[ $RESPONSE_CODE -eq 200 ]]; then
