--- a/package.json
+++ b/package.json
@@ -73,8 +73,10 @@
     "@datadog/native-metrics": "^2.0.0",
     "@datadog/pprof": "3.2.0",
     "@datadog/sketches-js": "^2.1.0",
+    "@istanbuljs/esm-loader-hook": "^0.2.0",
     "@opentelemetry/api": "^1.0.0",
     "@opentelemetry/core": "^1.14.0",
+    "c8": "^8.0.1",
     "crypto-randomuuid": "^1.0.0",
     "diagnostics_channel": "^1.1.0",
     "ignore": "^5.2.4",
