--- a/.github/workflows/profiling.yml
+++ b/.github/workflows/profiling.yml
@@ -27,6 +27,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/node/setup
       - run: yarn install
+      - uses: ./.github/actions/node/14
+      - run: yarn test:profiler:ci
       - uses: ./.github/actions/node/16
       - run: yarn test:profiler:ci
       - uses: ./.github/actions/node/18
