fix script permissions

--- a/.github/actions/testagent/results/action.yml
+++ b/.github/actions/testagent/results/action.yml
@@ -4,5 +4,6 @@ runs:
   using: composite
   steps:
     - uses: actions/checkout@v2
-    - run: ./scripts/get_test_agent_results.sh
+    - run: |
+        bash ./scripts/get_test_agent_results.sh
       shell: bash
