--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "typings": "index.d.ts",
   "scripts": {
     "preinstall": "node scripts/preinstall.js",
+    "postinstall": "yarn link dd-trace-collector",
     "bench": "node benchmark",
     "bench:profiler": "node benchmark/profiler",
     "bench:e2e": "SERVICES=mongo yarn services && cd benchmark/e2e && node benchmark-run.js --duration=30",
@@ -76,6 +77,7 @@
     "@opentelemetry/api": "^1.0.0",
     "@opentelemetry/core": "^1.14.0",
     "crypto-randomuuid": "^1.0.0",
+    "dd-trace-collector": "link:~/dd/dd-trace-collector/node",
     "diagnostics_channel": "^1.1.0",
     "ignore": "^5.2.4",
     "import-in-the-middle": "^1.4.2",
