--- a/.github/workflows/appsec.yml
+++ b/.github/workflows/appsec.yml
@@ -151,3 +151,4 @@ jobs:
       - run: yarn test:appsec:plugins:ci
       - uses: ./.github/actions/node/latest
       - run: yarn test:appsec:plugins:ci
+      - uses: codecov/codecov-action@v2
