--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "apm"
   ],
   "author": "Datadog Inc. <info@datadoghq.com>",
-  "license": "BSD-3-Clause",
+  "license": "(Apache-2.0 OR BSD-3-Clause)",
   "bugs": {
     "url": "https://github.com/DataDog/dd-trace-js/issues"
   },
