--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -3,7 +3,7 @@ name: Release dev release line
 on:
   push:
     branches:
-      - master
+      - npm_provenance
 
 jobs:
   dev_release:
@@ -22,27 +22,4 @@ jobs:
           content=`cat ./package.json | tr '\n' ' '`
           echo "::set-output name=json::$content"
       - run: npm version --no-git-tag-version ${{ fromJson(steps.pkg.outputs.json).version }}-$(git rev-parse --short HEAD)+${{ github.run_id }}.${{ github.run_attempt }}
-      - run: npm publish --tag dev --provenance
-      - run: |
-          git tag --force dev
-          git push origin :refs/tags/dev
-          git push origin --tags
-
-  injection-image-publish:
-    runs-on: ubuntu-latest
-    needs: ['dev_release']
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-      - name: Log in to the Container registry
-        uses: docker/login-action@49ed152c8eca782a232dede0303416e8f356c37b
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: npm pack for injection image
-        run: |
-          npm pack dd-trace@dev
-      - uses: ./.github/actions/injection
-        with:
-          init-image-version: dev
+      - run: npm publish --tag dev --provenance --dry-run
